prepare docker configurations (#3)
* prepare docker configurations
* fix volume issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,14 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ${POSTGRES_VOLUME_DATA:-/tmp/marketplace-db}:/var/lib/postgresql/data
+      - marketplace-db-data:/var/lib/postgresql/data
     networks:
-      internal:
-        aliases:
-          - ${POSTGRES_HOST:-postgres}
+      - internal
+
 networks:
   internal:
     name: ${PROJECT_NAME:-marketplace}
+
+volumes:
+  marketplace-db-data:
+    name: ${POSTGRES_VOLUME_NAME:-marketplace-db-data}
