added 'checkApiKey' middleware

--- a/medusa-marketplace-demo/.env.template
+++ b/medusa-marketplace-demo/.env.template
@@ -6,3 +6,4 @@ JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DB_NAME=marketplace
 DATABASE_URL=postgres://marketplace:super-secure-password@localhost/$DB_NAME% 
+API_KEY=noop
