--- a/medusa-marketplace-demo/.env.template
+++ b/medusa-marketplace-demo/.env.template
@@ -5,5 +5,6 @@ REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DB_NAME=marketplace
-DATABASE_URL=postgres://marketplace:super-secure-password@localhost/$DB_NAME% 
+DATABASE_URL=postgres://marketplace:super-secure-password@localhost/$DB_NAME
 API_KEY=noop
+VITE_BACKEND_URL=http://localhost:9000
